--- a/index.html
+++ b/index.html
@@ -5,29 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
-
     <link rel="stylesheet" href="./style/animation.css">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/login.css">
     <link rel="stylesheet" href="./style/fonts.css">
     <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
-
     <script defer src="./script/storage.js"></script>
     <script defer src="./script/task.js"></script>
     <script defer src="./script/contacts.js"></script>
     <script defer src="./script/register.js"></script>
     <script defer src="./script/login.js"></script>
-
 </head>
 
-<!-- this is the log in -->
-
 <body onload="initLogin()">
-
     <div class="join-logo-contain d-none">
         <img class="join-logo" src="img/favicon.svg" alt="">
     </div>
-
     <header>
         <div class="logo-container">
             <img src="./img/join-logo.svg" alt="">
@@ -37,20 +30,16 @@
             <button onclick="loadRegister()" type="button" class="button blue-btn fontSize16"><b>Sign up</b></button>
         </div>
     </header>
-
     <div class="section">
-        <div id="dialog" class="dialog-login">
-
-        </div>
+        <div id="dialog" class="dialog-login"></div>
     </div>
     <div class="sign-up-mobile">
         <span>Not a Join user?</span>
         <button onclick="loadRegister()" type="button" class="button blue-btn fontSize16">Sign up</button>
     </div>
-
     <div class="police">
         <div class="police-link">
-            <a href="./privacy-police.html">Privacy Policy</a>
+            <a href="./privacy-policy.html">Privacy Policy</a>
         </div>
         <div class="police-link">
             <a href="./legalNotice.html">Legal Notice</a>
