--- a/legalNotice.html
+++ b/legalNotice.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legal Notice</title>
-
     <script defer src="./templates/templates.js"></script>
     <script defer src="./script/storage.js"></script>
-
     <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./templates/header_sidebar.css">
@@ -17,7 +15,6 @@
     <link rel="stylesheet" href="./style/fonts.css">
     <link rel="stylesheet" href="./https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
 </head>
 
 <body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActiveUser(), showUserCircle(), hideSidebarLinks()">
@@ -29,32 +26,26 @@
         <div class="menu-header">
             <a href="./help.html">Help</a>
             <a href="./legalNotice.html">Legal Notice</a>
-            <a href="./privacy-police.html">Privacy Policy</a>
+            <a href="./privacy-policy.html">Privacy Policy</a>
             <a href="./index.html">Log Out</a>
         </div>
     </div>
-
     <div class="quicklinks-container">
-
         <span class="fontSize61 quicklinks-headline column">
             <b>Legal Notice</b>
         </span>
-
         <span class="fontSize20 column">
             <b>Imprint</b>
         </span>
         <span class="fontSize16 mb24 column">
             Lina Wionsek<br>
         </span>
-
         <span class="fontSize20 column">
             <b>Exploring the Board</b>
         </span>
         <span class="fontSize26 mb24 column">
             <span>Email: <a href="mailto:lina.wionsek@gmx.de">lina.wionsek&#64;gmx.de</a></span>
         </span>
-        
-
         <span class="fontSize20 column mt24">
             <b>Acceptance of terms</b>
         </span>
@@ -65,7 +56,6 @@
             students, may update or change the
             terms and conditions from time to time without notice.
         </span>
-
         <span class="fontSize20">
             <b>Scope and ownership of the product</b>
         </span>
@@ -79,7 +69,6 @@
             replication of the design is strictly
             prohibited.
         </span>
-
         <span class="fontSize20">
             <b>Proprietary rights</b>
         </span>
@@ -88,7 +77,6 @@
             rights
             in Join, including any associated copyrighted material, trademarks, and other proprietary information.
         </span>
-
         <span class="fontSize20">
             <b>Use of the product</b>
         </span>
@@ -100,7 +88,6 @@
             prohibited. You are solely responsible
             for your interactions with other users of Join.
         </span>
-
         <span class="fontSize20">
             <b>Disclaimer of warranties and limitation of liability</b>
         </span>
@@ -117,12 +104,10 @@
             advised of the possibility of such damages, arising out of or in connection with the use or performance of
             Join.
         </span>
-
         <div class="pointer" id="mobile_backarrow_id" onclick="goBack()">
             <img src="./img/arror-left.svg">
         </div>
     </div>
-
 </body>
 
 </html>
