--- a/privacy-police.html
+++ b/privacy-police.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Privacy Policy</title>
     <script defer src="./templates/templates.js"></script>
     <script defer src="./script/storage.js"></script>
     <link rel="stylesheet" href="./templates/header_sidebar.css">
@@ -18,7 +17,6 @@
     <link rel="stylesheet" href="./style/legalNotice.css">
 </head>
 
-
 <body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActiveUser(), showUserCircle(), hideSidebarLinks()">
     <div id="sidebarArea"></div>
     <div id="headerArea"></div>
@@ -26,11 +24,10 @@
         <div class="menu-header">
             <a href="./help.html">Help</a>
             <a href="./legalNotice.html">Legal Notice</a>
-            <a href="./privacy-police.html">Privacy Policy</a>
+            <a href="./privacy-policy.html">Privacy Policy</a>
             <a href="./index.html">Log Out</a>
         </div>
     </div>
-
     <div class="quicklinks-container">
         <div>
             <div class="fontSize61 quicklinks-headline">
@@ -45,31 +42,28 @@
                 41061 Mönchengladbach<br><br>
             </span>
             <span class="fontSize27 mb10 column"><b>Vertreten durch:</b></span>
-                <span class="fontSize16 column">
-                    Lina Wionsek
-                </span><br>
-                <span class="fontSize16 mb10">
-                    <b>Kontakt:</b>
-                </span>
-                <span class="fontSize16 mb35">
-                    Lina Wionsek<br>
-                    <b>E-Mail:</b> <a href='mailto:lina.wionsek@gmx.de'>lina.wionsek@gmx.de</a></br><br>
-                </span>
-                <span class="fontSize16">
-                    Website Impressum erstellt durch
-                    <a href="https://www.impressum-generator.de">impressum-generator.de</a>
-                    von
-                    der
-                    <a href="https://www.kanzlei-hasselbach.de/" rel="nofollow">Kanzlei Hasselbach</a>
-                </span>
+            <span class="fontSize16 column">
+                Lina Wionsek
+            </span><br>
+            <span class="fontSize16 mb10">
+                <b>Kontakt:</b>
+            </span>
+            <span class="fontSize16 mb35">
+                Lina Wionsek<br>
+                <b>E-Mail:</b> <a href='mailto:lina.wionsek@gmx.de'>lina.wionsek@gmx.de</a></br><br>
+            </span>
+            <span class="fontSize16">
+                Website Impressum erstellt durch
+                <a href="https://www.impressum-generator.de">impressum-generator.de</a>
+                von
+                der
+                <a href="https://www.kanzlei-hasselbach.de/" rel="nofollow">Kanzlei Hasselbach</a>
+            </span>
         </div>
-
         <div class="pointer" id="mobile_backarrow_id" onclick="goBack()">
             <img src="./img/arror-left.svg">
         </div>
     </div>
-
-
 </body>
 
 </html>
