--- a/task.html
+++ b/task.html
@@ -13,12 +13,12 @@
     <script defer src="./script/taskContacts.js"></script>
     <script defer src="./script/taskPriorities.js"></script>
     <script defer src="./script/taskSubtasks.js"></script>
-    <link rel="stylesheet" href="style/task.css">
-    <link rel="stylesheet" href="style/addTask_media_query.css">
-    <link rel="stylesheet" href="style/fonts.css">
-    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="templates/header_sidebar.css">
+    <link rel="stylesheet" href="./style/task.css">
+    <link rel="stylesheet" href="./style/addTask_media_query.css">
+    <link rel="stylesheet" href="./style/fonts.css">
+    <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./templates/header_sidebar.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
